X.Y.Z: YYYY MMM DD:
 * Implemented a kqueue event handler

0.1.2 - 2011 April 16:
 * Rename to portbuilder (and pyport->libpb)
 * Use python/distutils to make program installable
 * Add support for profiling internals (use gprof2dot to parse output)
 * Add FreeBSD port (currently only -devel)

0.1.1 - 2011 March 16:
 * Add support for fetch_only mode
 * Add support for (recursive) update mode
 * Cleanup after port completion
 * Allow program to be terminated prematurely
 * Add support for building ports in a chroot environment
 * Add internal support for cross building (convenience)
 * Add package building

0.1.0 - 2011 February 15:
 *  Rewrite of pypkg (now pyport) to remove need for threads

0.0.5 - 2008 November 17:
 * Speedups in:
   - pkg_version
   * CacheDB:
     - Caching of port data
     - Caching of fetched files
   - AutoExit (move to quick notification)
   - PortCache (reduced duplicate jobs)
 * Fix monitor when console access is required (config and interactive build)
 * Port:
   - Self cleaning and precleaning (with precision cleaning)
   - Add logging of port targets
   - Handle pkg-message
   - config stage only calls config when needed
   - fetch exclusion based on files fetching
   - Proper handling of non privilaged building (via sudo)

0.0.4 - 2008 October 29:
 * pypkg:
   * Add a stripped down version that can
     - Install/upgrade ports
     - Make packages
     - Allow variables to be passed to make
     - fetch only
     - No op (just prints the commands)
   * Initial support for making INDEX (still too slow)
 * Port:
   - Can clean ports
 * Rename TargetBuilder to StageBuilder
 * Create progress monitor for the build process (aka top mode)
 * Create progress monitor type 2 (aka stat mode)
 * Implement proper thread/system shutdown:
   - Create interrupt handlers
   - Create exit handlers
   - Provide easy interface for running main
 * Cleanup the use of tools
 * Create proper statistical handling of data (with easy collection methods)